--- a/ClippyMAUI/wwwroot/index.html
+++ b/ClippyMAUI/wwwroot/index.html
@@ -8,12 +8,15 @@
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
 	<link href="css/app.css" rel="stylesheet" />
 	<link href="ClippyMAUI.styles.css" rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" href="_content/BlazorClippy/clippy.css" media="all">
 </head>
 
 <body>
 
 	<div id="app">Loading...</div>
-
+	<script src="_content/BlazorClippy/jquery.slim.min.js"></script>
+    <script src="_content/BlazorClippy/clippy.min.js"></script>
+    <script src="_content/BlazorClippy/clippyInterop.js"></script>
 	<div id="blazor-error-ui">
 		An unhandled error has occurred.
 		<a href="" class="reload">Reload</a>
